# experimentation-frameowkr-agents

./: .gitignore  .ruff.toml  FOUNDRY_EVALUATORS.md  INSTALL_TEST.md  README.md  evaluator_diagnostics.py  pyproject.toml  test_config.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
evaluators/equivalent/: equivalent.py  flow.flex.yaml  requirements.txt
examples/: README.md
examples/custom-evaluators/: CUSTOM_EVALUATORS_GUIDE.md  README.md  config.yaml  demo_evaluators.py  simple_echo_module.py
examples/datasets/sample/0.1/: test_data.jsonl
examples/nested-evaluators-demo/: README.md  config.yaml  nested_evaluator_loader.py
examples/nested-evaluators-demo/custom_evaluators/: __init__.py
examples/nested-evaluators-demo/custom_evaluators/advanced/: __init__.py  evaluators.py
examples/nested-evaluators-demo/custom_evaluators/basic/: __init__.py  evaluators.py
examples/quick-start/: README.md  config.yaml  simple_echo_module.py
examples/sample/: README.md  config.yaml  simple_math_module.py
examples/semantic-kernel-plugin/: README.md  config.yaml  custom_evaluators.py  requirements.txt  semantic_kernel_math_module.py
examples/semantic_kernel/: .env.example  README.md  requirements.txt  setup.py
examples/semantic_kernel/simple_examples/: 01_basic_math.py  02_basic_chat.py  03_function_calling.py  04_conversation_flow.py  README.md  run_all.py
examples/system-path-demo/: README.md  config.yaml  debug_config.yaml  debug_evaluator_registration.py  main_processor.py  main_processor_debug.py  main_processor_with_problematic.py  test_config.yaml  test_error_handling_config.yaml  test_problematic_evaluator.py  test_python_path.py
examples/system-path-demo/shared/common/: text_utils.py
examples/system-path-demo/utils/helpers/: utility_eval.py
notebooks/: README.md  advanced_example.py  experiment_interface.py
src/exp_platform_cli/: __init__.py  cli.py  config.py  constants.py  logger.py  orchestrator.py  utils.py
src/exp_platform_cli/evaluators/: __init__.py  agent_evaluators.py  base.py  enhanced_registry.py  equivalent.py  registry.py
src/exp_platform_cli/executables/: __init__.py  base.py  module_executable.py
src/exp_platform_cli/models/: __init__.py  data_model.py  data_types.py  experiment_config.py
src/exp_platform_cli/processors/: __init__.py  base.py  semantic_kernel_processor.py
src/exp_platform_cli/services/: __init__.py  cloud_evaluation.py  config_loader.py  dataset_service.py  evaluation_base.py  local_evaluation.py
tests/: test_cli.py  test_comprehensive.py  test_evaluators.py  test_logger.py  test_module_executable.py  test_yaml_config.py
tests/assets/: sample_module.py
tests/integration/: README.md  conftest.py  test_e2e_integration.py  test_foundry_basic.py  test_foundry_integration.py  test_foundry_performance.py
tutorials/: README.md
tutorials/01-quickstart/: README.md  flow.flex.yaml  requirements.txt  simple_conversation_module.py  test_config.yaml
tutorials/03-basic-concepts/: README.md
tutorials/04-simple-experiment/: README.md  flow.flex.yaml  requirements.txt  summarizer.py
(+81 files in other folders)
